--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel": "vercel --prod"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "next": "14.2.13",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "stripe": "^17.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
