--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "vercel": "vercel --prod"
   },
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^12.7.0",
     "next": "14.2.13",
     "nodemailer": "^6.9.16",
     "react": "^18",
